--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/stud.html" },
+    { "source": "/about", "destination": "/stud.html" },
     { "source": "/contact", "destination": "/contact.html" },
     { "source": "/projects", "destination": "/projects.html" },
     { "source": "/skills", "destination": "/skills.html" }
+  ],
+  "redirects": [
+    { "source": "/contact.html", "destination": "/contact", "permanent": true },
+    { "source": "/projects.html", "destination": "/projects", "permanent": true },
+    { "source": "/skills.html", "destination": "/skills", "permanent": true },
+    { "source": "/stud.html", "destination": "/", "permanent": true }
   ]
 }
